--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,7 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply text-purple-300 hover:text-purple-400;
 }
 
 * {
@@ -30,4 +29,9 @@ input,
 select,
 textarea {
   @apply rounded border p-2
- outline-none ring-indigo-300 focus:ring}
+ outline-none ring-indigo-300 focus:ring
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
+}
